# OpenMC_Crash_Course

./: .gitignore  .openmc_xs_config.sh.template  README.md  pyproject.toml
examples/: README.md
examples/01_infinite_medium/: main.py
examples/02_infinite_pincell/: main.py
examples/03_finite_pincell/: main.py
examples/04_assembly/: main.py
examples/05_core/: main.py
openmc_crash_course/: __init__.py  geometry.py  main.py  materials.py
